force-app/main/default/objects/Project__c/fields/CHF_To_EURO__c.field-meta.xml
<CustomField>
    <fullName>CHF_To_EURO__c</fullName>
    <label>CHF To EURO</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>