force-app/main/default/objects/Project__c/fields/CHF_To_GBP__c.field-meta.xml
<CustomField>
    <fullName>CHF_To_GBP__c</fullName>
    <label>CHF To GBP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>