force-app/main/default/objects/Project__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <label>Community</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MIRA Verde</fullName>
            </value>
            <value>
                <fullName>Richmond District</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>