force-app/main/default/objects/Project__c/fields/Community_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Community_Arabic__c</fullName>
    <label>Community Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>