force-app/main/default/objects/Project__c/fields/Coordinates_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Coordinates_Latitude__c</fullName>
    <label>Coordinates/Latitude</label>
    <precision>18</precision>
    <required>true</required>
    <scale>15</scale>
    <type>Number</type>
</CustomField>