force-app/main/default/objects/Project__c/fields/Count_Booked_Reserved_Sold_Tower_A__c.field-meta.xml
<CustomField>
    <fullName>Count_Booked_Reserved_Sold_Tower_A__c</fullName>
    <label>Count Booked/Reserved/Sold Tower A</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>