force-app/main/default/objects/Project__c/fields/Count_Perc_Booked_Reserved_Sold_Tower_A__c.field-meta.xml
<CustomField>
    <fullName>Count_Perc_Booked_Reserved_Sold_Tower_A__c</fullName>
    <formula>IF(Total_Units_Tower_A__c &gt; 0,
 Count_Booked_Reserved_Sold_Tower_A__c / Total_Units_Tower_A__c,
 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Count Booked/Reserved/Sold Tower A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>