force-app/main/default/objects/Project__c/fields/Count_Percent_Booked_Reserved_Sold_Units__c.field-meta.xml
<CustomField>
    <fullName>Count_Percent_Booked_Reserved_Sold_Units__c</fullName>
    <formula>IF(Number_of_Units__c &gt; 0,
Count_Booked_Reserved_Sold_Units__c / Number_of_Units__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Count Booked/Reserved/Sold Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>