force-app/main/default/objects/Project__c/fields/DLD_Registration_Required__c.field-meta.xml
<CustomField>
    <fullName>DLD_Registration_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, units in this project must have DLD/Registration paid to be eligible for commission. When unchecked, that condition is not applied.</description>
    <inlineHelpText>When checked, units in this project must have DLD/Registration paid to be eligible for commission. When unchecked, the DLD paid condition is skipped.</inlineHelpText>
    <label>DLD Registration Required</label>
    <type>Checkbox</type>
</CustomField>