force-app/main/default/objects/Project__c/fields/Handover__c.field-meta.xml
<CustomField>
    <fullName>Handover__c</fullName>
    <label>Handover</label>
    <required>true</required>
    <type>Date</type>
</CustomField>