force-app/main/default/objects/Project__c/fields/Is_POST__c.field-meta.xml
<CustomField>
    <fullName>Is_POST__c</fullName>
    <formula>IF(Name &lt;&gt; &apos;POST HOTEL &amp; RESIDENCES By ELIE SAAB&apos;, false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is POST</label>
    <type>Checkbox</type>
</CustomField>