force-app/main/default/objects/Project__c/fields/Is_VAT_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Is_VAT_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is VAT Applicable</label>
    <type>Checkbox</type>
</CustomField>