force-app/main/default/objects/Project__c/fields/Location_Description__c.field-meta.xml
<CustomField>
    <fullName>Location_Description__c</fullName>
    <label>Location Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>