force-app/main/default/objects/Project__c/fields/Minimum_Cost__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Cost__c</fullName>
    <inlineHelpText>Will be calculated automatically according to all related &apos;Published&apos; Units, after you change their Status or Cost</inlineHelpText>
    <label>Minimum Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>