force-app/main/default/objects/Project__c/fields/No_Handover_Payment__c.field-meta.xml
<CustomField>
    <fullName>No_Handover_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Handover Payment!</label>
    <type>Checkbox</type>
</CustomField>