force-app/main/default/objects/Project__c/fields/Old_Project__c.field-meta.xml
<CustomField>
    <fullName>Old_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old Project</label>
    <type>Checkbox</type>
</CustomField>