force-app/main/default/objects/Project__c/fields/Payment_Plan_Title__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Title__c</fullName>
    <label>Payment Plan Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>