force-app/main/default/objects/Project__c/fields/Payments_Sum_Not_100__c.field-meta.xml
<CustomField>
    <fullName>Payments_Sum_Not_100__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payments Sum Not 100%</label>
    <type>Checkbox</type>
</CustomField>