force-app/main/default/objects/Project__c/fields/Project_Currency__c.field-meta.xml
<CustomField>
    <fullName>Project_Currency__c</fullName>
    <label>Project Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>