force-app/main/default/objects/Project__c/fields/Project_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_Arabic__c</fullName>
    <label>Project Name (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>