force-app/main/default/objects/Project__c/fields/Project_Received_Value__c.field-meta.xml
<CustomField>
    <fullName>Project_Received_Value__c</fullName>
    <label>Project Received Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>