force-app/main/default/objects/Project__c/fields/Project_Remaining_Value__c.field-meta.xml
<CustomField>
    <fullName>Project_Remaining_Value__c</fullName>
    <formula>Project_Value__c - Project_Received_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Remaining Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>