force-app/main/default/objects/Project__c/fields/Project_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Project_Total_Value__c</fullName>
    <formula>CASE(TEXT(Project_Currency__c),
&quot;USD&quot;, Project_Value_USD__c,
&quot;CHF&quot;, Project_Value_Post__c,
Project_Value__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>