force-app/main/default/objects/Project__c/fields/Project_Value_Post__c.field-meta.xml
<CustomField>
    <fullName>Project_Value_Post__c</fullName>
    <label>Project Value Post</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>