force-app/main/default/objects/Project__c/fields/Publish_Project__c.field-meta.xml
<CustomField>
    <fullName>Publish_Project__c</fullName>
    <label>Publish Project?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>On Approval</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>