force-app/main/default/objects/Project__c/fields/Registration_Fees__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fees__c</fullName>
    <label>Registration Fees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully paid by the Purchaser</fullName>
            </value>
            <value>
                <fullName>Fully paid by the Seller</fullName>
            </value>
            <value>
                <fullName>50% payable by Purchaser, 50% payable by Seller, Purchaser pays all administration fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>