force-app/main/default/objects/Project__c/fields/Top_Amount__c.field-meta.xml
<CustomField>
    <fullName>Top_Amount__c</fullName>
    <label>Top Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>