force-app/main/default/objects/Project__c/fields/Top_RM__c.field-meta.xml
<CustomField>
    <fullName>Top_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Top RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>