force-app/main/default/objects/Project__c/fields/Total_Units_Tower_B__c.field-meta.xml
<CustomField>
    <fullName>Total_Units_Tower_B__c</fullName>
    <label>Total Units Tower B</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>