force-app/main/default/objects/Project__c/fields/Total_Value_Tower_B__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_Tower_B__c</fullName>
    <label>Total Value Tower B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>