force-app/main/default/objects/Project__c/fields/USD_To_Euro__c.field-meta.xml
<CustomField>
    <fullName>USD_To_Euro__c</fullName>
    <label>USD To Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>