force-app/main/default/objects/Project__c/fields/USD_to_GEL__c.field-meta.xml
<CustomField>
    <fullName>USD_to_GEL__c</fullName>
    <label>USD to GEL</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>