force-app/main/default/objects/Project__c/fields/USD_To_RUB__c.field-meta.xml
<CustomField>
    <fullName>USD_To_RUB__c</fullName>
    <label>USD To RUB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>