force-app/main/default/objects/Project__c/fields/USP_Description__c.field-meta.xml
<CustomField>
    <fullName>USP_Description__c</fullName>
    <label>USP/Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>