force-app/main/default/objects/Project__c/fields/USP_Image__c.field-meta.xml
<CustomField>
    <fullName>USP_Image__c</fullName>
    <label>USP/Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>