force-app/main/default/objects/Project__c/fields/USP_Name__c.field-meta.xml
<CustomField>
    <fullName>USP_Name__c</fullName>
    <label>USP/Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>