force-app/main/default/objects/Project__c/fields/Value_Booked_Reserved_Sold_Tower_B__c.field-meta.xml
<CustomField>
    <fullName>Value_Booked_Reserved_Sold_Tower_B__c</fullName>
    <label>Value Booked/Reserved/Sold Tower B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>