force-app/main/default/objects/Project__c/fields/Value_P_Booked_Reserved_Sold_Units_POST__c.field-meta.xml
<CustomField>
    <fullName>Value_P_Booked_Reserved_Sold_Units_POST__c</fullName>
    <formula>IF(Project_Value_Post__c &gt; 0,
Value_Booked_Reserved_Sold_Units_POST__c / Project_Value_Post__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Value Booked/Reserved/Sold Units POST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>