force-app/main/default/objects/Project__c/fields/Value_Perc_Booked_Reserved_Sold_Tower_A__c.field-meta.xml
<CustomField>
    <fullName>Value_Perc_Booked_Reserved_Sold_Tower_A__c</fullName>
    <formula>IF(Total_Value_Tower_A__c &gt; 0,
 Value_Booked_Reserved_Sold_Tower_A__c / Total_Value_Tower_A__c,
 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Value Booked/Reserved/Sold Tower A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>