force-app/main/default/objects/Project__c/fields/Value_Percent_Booked_Reserved_Sold_Units__c.field-meta.xml
<CustomField>
    <fullName>Value_Percent_Booked_Reserved_Sold_Units__c</fullName>
    <formula>IF(Project_Value__c &gt; 0,
Value_Booked_Reserved_Sold_Units__c / Project_Value__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Value Booked/Reserved/Sold Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>