force-app/main/default/objects/Project__c/fields/Voucher_Code_for_T2_Retail__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Code_for_T2_Retail__c</fullName>
    <formula>&quot;TR2-Retail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher Code for T2 Retail</label>
    <type>Text</type>
</CustomField>