force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>District__c</columns>
    <columns>Minimum_Cost__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Publish_Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>